fix: made text no longer overflow

--- a/client/src/public/css/styles.css
+++ b/client/src/public/css/styles.css
@@ -919,6 +919,8 @@ code {
   display: flex;
   flex-direction: column-reverse;
   color: var(--color-text-light);
+  overflow: auto;
+  word-wrap: break-word;
 }
 
 #chat-tray-input-container {
